# surreality-logging

./: LICENSE  README.md  go.mod  logging.go  setup.py
go/: README.md  go.mod  logging.go
python/: README.md  pyproject.toml  setup.py
python/surreality_logging/: __init__.py
python/tests/: test_basic.py
surreality_logging/: __init__.py
