[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surreality-logging"
version = "0.2.0"
description = "Standardized logging configuration for Surreality AI services using Loguru"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Surreality AI", email = "dev@surreality.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/SurrealityAI/surreality-logging"
Repository = "https://github.com/SurrealityAI/surreality-logging"
Issues = "https://github.com/SurrealityAI/surreality-logging/issues"

[tool.setuptools]
packages = ["surreality_logging"]

[tool.setuptools.package-data]
surreality_logging = ["py.typed"]
